fullSandbox11072023/force-app/main/default/objects/Complaint__c/Complaint__c.object-meta.xml
<CustomObject>
    <customHelpPage>Complaints_Help</customHelpPage>
    <label>Complaint</label>
    <nameField>
        <displayFormat>SF{000000}</displayFormat>
        <label>Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>