fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/A_medical_intervention_was_performed__c.field-meta.xml
<CustomField>
    <fullName>A_medical_intervention_was_performed__c</fullName>
    <inlineHelpText>A medical intervention was performed due to the alleged product issue.</inlineHelpText>
    <label>A medical intervention was performed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_the_product_was_being_used__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>