fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/A_medical_professional_alleged_that__c.field-meta.xml
<CustomField>
    <fullName>A_medical_professional_alleged_that__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A medical professional alleged that the device contributed to the reported event.</inlineHelpText>
    <label>Medical professional alleged</label>
    <type>Checkbox</type>
</CustomField>