fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Abnormalities_Doppler_ECG_Waveforms__c.field-meta.xml
<CustomField>
    <fullName>Abnormalities_Doppler_ECG_Waveforms__c</fullName>
    <inlineHelpText>Describe the event in detail and describe any/all system abnormalities, include descriptions of the Doppler (G4/Flybook) and ECG Waveforms, if appropriate.</inlineHelpText>
    <label>Abnormalities, Doppler, ECG Waveforms?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>