fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the name of the account where the event occurred.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.Active_Sales__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Complaints with No Customer Generic Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Active_Sales__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Accounts with sales are displayed in this window.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>