fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Account_Internal_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Internal_Reference__c</fullName>
    <inlineHelpText>Provide the customer&apos;s reference number associated to this event (i.e. risk management case number).</inlineHelpText>
    <label>Account Internal Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>