fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Account_PO_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Account_PO_Invoice__c</fullName>
    <inlineHelpText>If known, provide the PO or invoice number associated to the device. This will help with issuing credits/replacements.</inlineHelpText>
    <label>Account PO#/Invoice#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>