fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <formula>TEXT(Account__r.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>