fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/After_failed_IO_were_additonal_attempts__c.field-meta.xml
<CustomField>
    <fullName>After_failed_IO_were_additonal_attempts__c</fullName>
    <inlineHelpText>After failed IO attempt were additonal attempts at IO/PIV/CVC access made/achieved in other sites?</inlineHelpText>
    <label>After failure were additional attempts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>