fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/AgeUoM__c.field-meta.xml
<CustomField>
    <fullName>AgeUoM__c</fullName>
    <description>Age Unit of Measure (Y = years, M = months, D = days)</description>
    <inlineHelpText>Age Unit of Measure (Y = years, M = months, D = days)</inlineHelpText>
    <label>Age UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>