fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Anatomical_insertion_site__c.field-meta.xml
<CustomField>
    <fullName>Anatomical_insertion_site__c</fullName>
    <description>What was the anatomical insertion site of the device?</description>
    <inlineHelpText>What was the anatomical insertion site of the device?</inlineHelpText>
    <label>Anatomical insertion site?</label>
    <length>64</length>
    <type>Text</type>
</CustomField>