fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Approximate_delay_in_achieving_access__c.field-meta.xml
<CustomField>
    <fullName>Approximate_delay_in_achieving_access__c</fullName>
    <label>Approximate delay in achieving access</label>
    <length>100</length>
    <type>Text</type>
</CustomField>