fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Are_pump_strips_available_for_review__c.field-meta.xml
<CustomField>
    <fullName>Are_pump_strips_available_for_review__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Are pump strips available for review?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>