fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Artery_Size__c.field-meta.xml
<CustomField>
    <fullName>Artery_Size__c</fullName>
    <description>Field added for Manta Complaint Process.</description>
    <label>Artery Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>