fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Assessment_Strips_attached__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Strips_attached__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Assessment - Strips attached?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>