fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Can_patient_case_be_downloaded__c.field-meta.xml
<CustomField>
    <fullName>Can_patient_case_be_downloaded__c</fullName>
    <inlineHelpText>Can patient case or snapshot be downloaded?</inlineHelpText>
    <label>Can patient case be downloaded?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>