fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Cardiac_Abnormality_Details__c.field-meta.xml
<CustomField>
    <fullName>Cardiac_Abnormality_Details__c</fullName>
    <inlineHelpText>-afib -arterial arrhythmias  -ventricle arrhythmias  -pacemaker</inlineHelpText>
    <label>Cardiac Abnormality Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>