fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Catheter_insered_under_fluroscopy__c.field-meta.xml
<CustomField>
    <fullName>Catheter_insered_under_fluroscopy__c</fullName>
    <label>Catheter inserted under fluoroscopy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>