fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Catheter_Placement_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Catheter_Placement_Additional_Info__c</fullName>
    <label>Catheter Placement Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>