fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Catheter_was_successfully_removed__c.field-meta.xml
<CustomField>
    <fullName>Catheter_was_successfully_removed__c</fullName>
    <label>Catheter was successfully removed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Without surgical intervention</fullName>
            </value>
            <value>
                <fullName>With surgical intervention</fullName>
            </value>
            <value>
                <fullName>Portion of catheter remains in patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>