fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Clinician_attempting_insertion__c.field-meta.xml
<CustomField>
    <fullName>Clinician_attempting_insertion__c</fullName>
    <label>Clinician attempting insertion:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMT-P</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>