fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Closure_ACT__c.field-meta.xml
<CustomField>
    <fullName>Closure_ACT__c</fullName>
    <description>Field added for Manta Complaint Process.</description>
    <label>Closure ACT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>