fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Complaint_Related_Comments__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Related_Comments__c</fullName>
    <label>Complaint Related Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>