fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Complaint_submitted_within_24_hours_of_T__c.field-meta.xml
<CustomField>
    <fullName>Complaint_submitted_within_24_hours_of_T__c</fullName>
    <label>Submitted w/in 24 Hrs of TFX Aware Date</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>