fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Components_involved__c.field-meta.xml
<CustomField>
    <fullName>Components_involved__c</fullName>
    <description>Indicate the specific components involved during the reported event?</description>
    <inlineHelpText>Indicate the specific components involved during the reported event?</inlineHelpText>
    <label>Components involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Introducer Needle</fullName>
            </value>
            <value>
                <fullName>Catheter over Needle</fullName>
            </value>
            <value>
                <fullName>Catheter</fullName>
            </value>
            <value>
                <fullName>Sheath</fullName>
            </value>
            <value>
                <fullName>Other Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>