fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Contact_Dept__c.field-meta.xml
<CustomField>
    <fullName>Contact_Dept__c</fullName>
    <label>Contact Dept</label>
    <length>15</length>
    <type>Text</type>
</CustomField>