fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <inlineHelpText>Provide the name of a person at the account that can be contacted about this event.</inlineHelpText>
    <label>Contact Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>