fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Contact Title</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>