fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Created_By_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Business_Unit__c</fullName>
    <formula>TEXT(CreatedBy.Business_Unit__c)</formula>
    <label>Created By Business Unit</label>
    <type>Text</type>
</CustomField>