fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/CreditRequestedfromVendor__c.field-meta.xml
<CustomField>
    <fullName>CreditRequestedfromVendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Requested from Vendor</label>
    <type>Checkbox</type>
</CustomField>