fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Customer_response_letter_requested__c.field-meta.xml
<CustomField>
    <fullName>Customer_response_letter_requested__c</fullName>
    <inlineHelpText>Did the customer request a written response with the complaint investigation results?</inlineHelpText>
    <label>Customer response letter requested?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>