fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Date_Expired__c.field-meta.xml
<CustomField>
    <fullName>Date_Expired__c</fullName>
    <description>If deceased, what date?</description>
    <inlineHelpText>If deceased, what date?</inlineHelpText>
    <label>Date Expired</label>
    <type>Date</type>
</CustomField>