fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Date_Time_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Approved__c</fullName>
    <description>Updates within the approval process for VSI</description>
    <inlineHelpText>Automatically updates when the complaint is approved</inlineHelpText>
    <label>Date/Time Approved</label>
    <type>DateTime</type>
</CustomField>