fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Date_Time_T_F__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_T_F__c</fullName>
    <formula>Date_Time_Approved__c &gt;  INTV_Date_Time_Check__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Time T/F</label>
    <type>Checkbox</type>
</CustomField>