fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/De_identified_imaging_available__c.field-meta.xml
<CustomField>
    <fullName>De_identified_imaging_available__c</fullName>
    <description>Field added for Manta Complaint Process.</description>
    <label>De-identified imaging available?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>