fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>TEXT(Contact__r.Department_Picklist__c)</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>