fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Describe_any_ancillary_devices_used__c.field-meta.xml
<CustomField>
    <fullName>Describe_any_ancillary_devices_used__c</fullName>
    <inlineHelpText>Describe any additional devices that were used in the procedure that may have been involved in the event or contributed to the event. Please include sizes and brands if possible.</inlineHelpText>
    <label>Describe Any Ancillary Devices Used</label>
    <type>TextArea</type>
</CustomField>