fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Describe_identification_insertion_site__c.field-meta.xml
<CustomField>
    <fullName>Describe_identification_insertion_site__c</fullName>
    <inlineHelpText>EZ-IO or OnControl: Describe insertion site</inlineHelpText>
    <label>Describe insertion site</label>
    <type>TextArea</type>
</CustomField>