fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Describe_intervention_performed__c.field-meta.xml
<CustomField>
    <fullName>Describe_intervention_performed__c</fullName>
    <inlineHelpText>Describe any interventions performed (e.g., used replacement stylet, swapped out ECG cable, Stylet Extension Cable (G4), Remote control; inserted buddy wire in second lumen, etc.)</inlineHelpText>
    <label>Describe intervention performed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>