fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Describe_other_Procedure_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Describe_other_Procedure_Outcome__c</fullName>
    <inlineHelpText>If &quot;Other&quot; is selected for Procedure Outcome, please describe what happened.</inlineHelpText>
    <label>Describe &quot;other&quot; Procedure Outcome</label>
    <type>TextArea</type>
</CustomField>