fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Describe_the_issue_with_the_image_qualit__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_issue_with_the_image_qualit__c</fullName>
    <description>Describe the issue with the image quality</description>
    <inlineHelpText>Enter the issue details</inlineHelpText>
    <label>Describe the issue with image quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>