fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Describe_the_Medical_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_Medical_Intervention__c</fullName>
    <inlineHelpText>If there was a medical intervention, please describe what the intervention was and what happened as a result.</inlineHelpText>
    <label>Describe the Medical Intervention</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>