fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Describe_the_problem_encountered__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_problem_encountered__c</fullName>
    <label>Describe the problem encountered</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>