fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Describe_X_ray_findings__c.field-meta.xml
<CustomField>
    <fullName>Describe_X_ray_findings__c</fullName>
    <label>Describe X-ray findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>