fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Description_of_driver_problem__c.field-meta.xml
<CustomField>
    <fullName>Description_of_driver_problem__c</fullName>
    <label>Description of driver problem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operator noticed driver losing power</fullName>
            </value>
            <value>
                <fullName>Driver stopped completely</fullName>
            </value>
            <value>
                <fullName>Driver bogged down/stalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>