fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Device_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Device_User_Email__c</fullName>
    <label>Device User Email</label>
    <type>Email</type>
</CustomField>