fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Device_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Device_User_Phone__c</fullName>
    <label>Device User Phone</label>
    <type>Phone</type>
</CustomField>