fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Device_User_Title__c.field-meta.xml
<CustomField>
    <fullName>Device_User_Title__c</fullName>
    <label>Device User Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>