fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <inlineHelpText>REQUIRED for this Section</inlineHelpText>
    <label>Diagnosis</label>
    <type>TextArea</type>
</CustomField>