fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Did_clinician_pull_straight_up_removal__c.field-meta.xml
<CustomField>
    <fullName>Did_clinician_pull_straight_up_removal__c</fullName>
    <inlineHelpText>Did clinician pull straight up when removing catheter?</inlineHelpText>
    <label>Did clinician pull straight up removal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>