fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Did_delay_cause_harm_to_patient__c.field-meta.xml
<CustomField>
    <fullName>Did_delay_cause_harm_to_patient__c</fullName>
    <description>Did the delay or interruption cause harm to the patient?</description>
    <inlineHelpText>Did the delay or interruption cause harm to the patient?</inlineHelpText>
    <label>Did delay cause harm to patient?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>