fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Did_device_cause_contribute_to_death_inj__c.field-meta.xml
<CustomField>
    <fullName>Did_device_cause_contribute_to_death_inj__c</fullName>
    <label>Did device cause/contribute death/injury</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_the_product_was_being_used__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>