fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Did_ECG_calibrate_on_the_VPS_correctly__c.field-meta.xml
<CustomField>
    <fullName>Did_ECG_calibrate_on_the_VPS_correctly__c</fullName>
    <inlineHelpText>G4/Flybook ONLY</inlineHelpText>
    <label>Did ECG calibrate on the VPS correctly?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>