fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Did_operator_attempt_manual_placement__c.field-meta.xml
<CustomField>
    <fullName>Did_operator_attempt_manual_placement__c</fullName>
    <inlineHelpText>REQUIRED for this Section: Did operator attempt manual placement of EZ-IO catheter being inserted when driver issue occurred?</inlineHelpText>
    <label>Did operator attempt manual placement ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>