fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/During_a_patient_treatment__c.field-meta.xml
<CustomField>
    <fullName>During_a_patient_treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>During a patient treatment. (Describe below)</inlineHelpText>
    <label>During a patient treatment</label>
    <type>Checkbox</type>
</CustomField>