fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/During_use_on_a_patient__c.field-meta.xml
<CustomField>
    <fullName>During_use_on_a_patient__c</fullName>
    <label>During use on a patient</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_the_product_was_being_used__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Patient injury or consequence</fullName>
            </value>
            <value>
                <fullName>Patient death occurred</fullName>
            </value>
            <value>
                <fullName>An injury occurred but not a death</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>