fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Error_Message_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_Details__c</fullName>
    <description>This is to enter the error message details</description>
    <inlineHelpText>Please enter the deatils for error messages</inlineHelpText>
    <label>Error Message Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>