fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Estimated_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Event_Date__c</fullName>
    <inlineHelpText>If the exact Event Date is not known, fill in the Estimated Event Date field. Do not fill in both the Event Date and the Estimated Event Date fields- only one field should be used.</inlineHelpText>
    <label>Estimated Event Date</label>
    <type>Date</type>
</CustomField>