fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <inlineHelpText>Use this field if the exact Event Date is known. If the exact Event Date is not known, please use the Estimated Event Date field instead. Do not fill in both the Event Date and the Estimated Event Date- only one field should be used.</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>