fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/EZ_IO_Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>EZ_IO_Complaint_Type__c</fullName>
    <inlineHelpText>Please select one option and fill the information in the corresponding Section</inlineHelpText>
    <label>EZ-IO Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver Related only</fullName>
                <label>EZ-IO Driver Related only</label>
            </value>
            <value>
                <fullName>Needle Set/Catheter Related only</fullName>
            </value>
            <value>
                <fullName>Other Complications Related only</fullName>
            </value>
            <value>
                <fullName>On Control Driver Related only</fullName>
                <label>Driver Related only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>