fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Final_Investigation_Acknowledgement_Note__c.field-meta.xml
<CustomField>
    <fullName>Final_Investigation_Acknowledgement_Note__c</fullName>
    <defaultValue>&quot;Final investigation letters will be sent when material evidence is returned to Teleflex. If a sample is unavailable, please submit other forms of evidence such as photos or videos&quot;</defaultValue>
    <label>Final Investigation Acknowledgement Note</label>
    <length>200</length>
    <type>Text</type>
</CustomField>