fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Follow_up__c</fullName>
    <inlineHelpText>Used in Cardiac Complaint Form</inlineHelpText>
    <label>Follow-up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>