fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Follow_up_plan__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_plan__c</fullName>
    <label>Follow-up plan</label>
    <type>TextArea</type>
</CustomField>