fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Frequency_of_site_checks__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_site_checks__c</fullName>
    <inlineHelpText>REQUIRED for this Section</inlineHelpText>
    <label>Frequency of site checks</label>
    <type>TextArea</type>
</CustomField>