fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Give_me_a_C__c.field-meta.xml
<CustomField>
    <fullName>Give_me_a_C__c</fullName>
    <formula>&quot;C&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Give me a C</label>
    <type>Text</type>
</CustomField>