fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Has_Customer_Requested_Replacement_Produ__c.field-meta.xml
<CustomField>
    <fullName>Has_Customer_Requested_Replacement_Produ__c</fullName>
    <label>Replacement Product Requested?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>